welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:11: error: illegal start of simple expression
  		} else if (day<1=){
                                 ^alarmClock:14: error: ')' expected but '}' found.
		}
                ^